@@ -5,6 +5,7 @@ core:
 
 === Edge
 
+* Andrew O'Brian
 * Dirk Kelly
 * Oriol Gual
 * Petrik de Heus
