@@ -872,17 +872,30 @@ module StandardTags
     <pre><code><r:snippet name="snippet_name">Lorem ipsum dolor...</r:snippet></code></pre>
   }
   tag 'snippet' do |tag|
-    if name = tag.attr['name']
-      if snippet = Snippet.find_by_name(name.strip)
-        tag.locals.yield = tag.expand if tag.double?
-        tag.globals.page.render_snippet(snippet)
-      else
-        raise TagError.new("snippet '#{name}' not found")
-      end
+    required_attr(tag, 'name')
+    name = tag['name']
+
+    snippet = snippet_cache(name.strip)
+    # debugger
+    if snippet
+      tag.locals.yield = tag.expand if tag.double?
+      tag.globals.page.render_snippet(snippet)
     else
-      required_attr(tag,'name')
+      raise TagError.new("snippet '#{name}' not found")
     end
   end
+
+  def snippet_cache(name)
+    @snippet_cache ||= {}
+
+    snippet = @snippet_cache[name]
+    unless snippet
+      snippet = Snippet.find_by_name(name)
+      @snippet_cache[name] = snippet
+    end
+    snippet
+  end
+  private :snippet_cache
 
   desc %{
     Used within a snippet as a placeholder for substitution of child content, when
